Bug fix. Menu pages should have white-space: pre; instead of nowrap.

--- a/s2member/includes/menu-pages/menu-pages.css
+++ b/s2member/includes/menu-pages/menu-pages.css
@@ -355,7 +355,7 @@ div.ws-menu-page .monospace
 }
 div.ws-menu-page textarea.monospace
 {
-	white-space : nowrap;
+	white-space : pre;
 }
 div.ws-menu-page .clearfix:before,
 div.ws-menu-page .clearfix:after
